// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DNS/> Test with snapshot DHCP. 1`] = `
<div>
  <form>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="35"
        >
          Use forwarding
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="35"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        />
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="36"
        >
          Enable DNSSEC
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          checked=""
          id="36"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        />
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="37"
        >
          Enable DHCP clients in DNS
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="37"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        >
          This will enable your DNS resolver to place DHCP client's names among the local DNS records.
        </small>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="53"
      >
        Domain of DHCP clients in DNS
      </label>
      <div
        class="col-sm-8"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control "
            id="53"
            type="text"
            value="lan"
          />
        </div>
        <div
          class="invalid-feedback"
        />
        <small
          class="form-text text-muted"
        >
          This domain will be used as suffix. E.g. The result for client "android-123" and domain "my.lan" will be "android-123.my.lan".
        </small>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
    >
       
       
      Save
    </button>
  </form>
  <h1>
    Connection test
  </h1>
  <p>
    
Here you can test your internet connection. This test is also useful when you need to check that your DNS resolving 
works as expected. Remember to click on the 
    <b>
      Save button
    </b>
     if you changed your forwarder setting.
        
  </p>
  <form>
    <button
      class="btn btn-primary offset-lg-8 col-lg-3 col-sm-12"
    >
       
       
      Test connection
    </button>
  </form>
</div>
`;

exports[`<DNS/> Test with snapshot forwarding. 1`] = `
<div>
  <form>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="16"
        >
          Use forwarding
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="16"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        />
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-control-label col-sm-3"
        for="32"
      >
        DNS Forwarder
      </label>
      <div
        class="col-sm-8"
      >
        <select
          class="form-control"
          id="32"
        >
          <option
            value=""
          >
            Use provider's DNS resolver
          </option>
          <option
            value="99_cloudflare"
          >
            Cloudflare (TLS)
          </option>
          <option
            value="99_quad9"
          >
            Quad9 (TLS)
          </option>
          <option
            value="00_odvr-cznic"
          >
            CZ.NIC (TLS)
          </option>
          <option
            value="99_google"
          >
            Google
          </option>
        </select>
        <small
          class="form-text text-muted"
        />
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="17"
        >
          Enable DNSSEC
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          checked=""
          id="17"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        />
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="18"
        >
          Enable DHCP clients in DNS
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="18"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        >
          This will enable your DNS resolver to place DHCP client's names among the local DNS records.
        </small>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
    >
       
       
      Save
    </button>
  </form>
  <h1>
    Connection test
  </h1>
  <p>
    
Here you can test your internet connection. This test is also useful when you need to check that your DNS resolving 
works as expected. Remember to click on the 
    <b>
      Save button
    </b>
     if you changed your forwarder setting.
        
  </p>
  <form>
    <button
      class="btn btn-primary offset-lg-8 col-lg-3 col-sm-12"
    >
       
       
      Test connection
    </button>
  </form>
</div>
`;

exports[`<DNS/> Test with snapshot. 1`] = `
<div>
  <form>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="1"
        >
          Use forwarding
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="1"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        />
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="2"
        >
          Enable DNSSEC
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          checked=""
          id="2"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        />
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="form-label col-sm-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Enable DHCP clients in DNS
        </label>
      </div>
      <div
        class="form-check col-sm-8"
      >
        <input
          id="3"
          type="checkbox"
        />
        <small
          class="form-text text-muted"
        >
          This will enable your DNS resolver to place DHCP client's names among the local DNS records.
        </small>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
    >
       
       
      Save
    </button>
  </form>
  <h1>
    Connection test
  </h1>
  <p>
    
Here you can test your internet connection. This test is also useful when you need to check that your DNS resolving 
works as expected. Remember to click on the 
    <b>
      Save button
    </b>
     if you changed your forwarder setting.
        
  </p>
  <form>
    <button
      class="btn btn-primary offset-lg-8 col-lg-3 col-sm-12"
    >
       
       
      Test connection
    </button>
  </form>
</div>
`;
